swagger gen can join appointment
